--- a/calib_2.ipynb
+++ b/calib_2.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import my .py code \n",
     "# Run this to reimport without having to restart the whole notebook\n",
-    "import jakob_calib\n",
+    "import calibration_functions\n",
     "import importlib\n",
-    "importlib.reload(jakob_calib)\n",
-    "from jakob_calib import *"
+    "importlib.reload(calibration_functions)\n",
+    "from calibration_functions import *"
    ]
   },
   {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "Text(0, 0.5, 'Wavelength / Å')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     },
