Analyse Lily data all orders

--- a/real_data_1st_look.ipynb
+++ b/real_data_1st_look.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "TUNIT17 = 'unitless'                                                            "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x168945fd0>"
+       "<matplotlib.image.AxesImage at 0x13cd9cfd0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -220,6 +220,7 @@
     "# Plot all data in imshow\n",
     "orders_pix = np.array([data['spectrum'][o] for o in np.arange(len(data['spectrum']))]) # create 2d array\n",
     "plt.figure(figsize=(16, 8))\n",
+    "\n",
     "plt.imshow(orders_pix, aspect=\"auto\")\n",
     "# plt.savefig(\"figures/CCF.png\", dpi=1000)\n",
     "# plt.savefig(\"figures/CCF_300dpi.png\", dpi=100)\n",
