--- a/real_data_1st_look.ipynb
+++ b/real_data_1st_look.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,114 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "XTENSION= 'BINTABLE'           / binary table extension                         \n",
-       "BITPIX  =                    8 / array data type                                \n",
-       "NAXIS   =                    2 / number of array dimensions                     \n",
-       "NAXIS1  =               855362 / length of dimension 1                          \n",
-       "NAXIS2  =                   86 / length of dimension 2                          \n",
-       "PCOUNT  =                    0 / number of group parameters                     \n",
-       "GCOUNT  =                    1 / number of groups                               \n",
-       "TFIELDS =                   17 / number of table fields                         \n",
-       "EXTNAME = 'optimal '           / Extraction algorithm                           \n",
-       "VERSION = '0.3.0   '           / EXPRES pipeline code version                   \n",
-       "DATE-EXT= '2020-11-27T13:10:11.988' / Date and time of extraction               \n",
-       "EXT_SIZE=                   33 / Size of the extraction window (pixels)         \n",
-       "SCATLGHT=                    T / Scattered light removed before extraction      \n",
-       "PXOFFSET=              -3959.5 / First extracted pixel column on reduced image  \n",
-       "SCI_FLAT= '/expres/extracted/cals/science_flat/201127.flat.fits' / Science flat \n",
-       "MSTRFLAT= '/expres/extracted/cals/master_flat/master_flat_epoch5.fits' / Master \n",
-       "READ_N  = '/expres/extracted/cals/read_noise/201127.read_noise.fits' / Read nois\n",
-       "TRACES  = '/expres/extracted/cals/science_flat/traces/201127.traces.npy' / Order\n",
-       "FLAT_REL=                    T / Flat relative extracted spectral values        \n",
-       "EXT_BKGD=                    F / Background fit and removed during extraction   \n",
-       "COSMSIGM=                  8.0 / Sigma cut for cosmics rays                     \n",
-       "COSMTAIL=                  2.0 / Sigma cut for the tails of cosmic rays         \n",
-       "DATE-BLZ= '2020-11-27T13:13:46.049' / Date and time of blaze estimation         \n",
-       "DATE-WAV= '2020-11-27T13:20:25.298' / Date and time of wavelength calibration   \n",
-       "WAVE_CAL= 'LFC+ThAr'           / Wavelength Calibration Source                  \n",
-       "WAVE_MDL= 'design_matrix'      / Wavelength solution model                      \n",
-       "INTP_PRM= 'coeff   '           / Interpolated parameter for wavelength solution \n",
-       "INTP_MTD= 'local   '           / Wavelength solution interpolator               \n",
-       "DATE-CNT= '2020-11-27T15:48:55.260' / Date of continuum normalization           \n",
-       "CONT_EXT= 'continuous'         / Extent of the approximated continuum           \n",
-       "CONT_FNC= 'spline  '           / Function used to fit the continuum             \n",
-       "CONT_DEG=                    3 / Continuum fit function degree                  \n",
-       "CONT_CUT=                 -1.5 / Continuum sigma cut for absorption lines       \n",
-       "CONT_RES=                100.0 / Resolution of the B-spline continuum knots     \n",
-       "BARYMJD =    59180.22876586596                                                  \n",
-       "DATE-BC = '2020-11-27T15:50:09.067'                                             \n",
-       "DATEEXCL= '2020-11-27T14:40:08.748'                                             \n",
-       "EXCTINTP= 'local1  '                                                            \n",
-       "EXCPINTP= 'pchip   '                                                            \n",
-       "PWV     = '0.910   '           / Calculated telluric intensity at 6940.18A      \n",
-       "S-VALUE =   0.1408767849569384 / Calcium H&K S-value for 34411 on 201127        \n",
-       "HALPHA  =   0.1723331537660378 / H-alpha emission                               \n",
-       "HWIDTH  =     2.28973176857358 / H-alpha equivalent width                       \n",
-       "CCFFWHM =    8083.354276798833 / FWHM of the CCF                                \n",
-       "CCFFWHME=    17.17578946856912 / FWHM of the CCF error                          \n",
-       "BIS     =    -37.4917656933103 / BIS indicator a la Queloz+ 01                  \n",
-       "CCFVSPAN=   -20.19670122281241 / Velocity span of the CCF                       \n",
-       "BIGAUSS =   -9.257799694605637 / Bi-Gaussian Fit to the CCF                     \n",
-       "SKEWNORM= 0.009961862972281571 / Skew-normal Gaussian fit to the CCF            \n",
-       "DATE-ACT= '2021-01-13T19:04:38.174' / Date of activity indicator calculation    \n",
-       "TTYPE1  = 'wavelength'                                                          \n",
-       "TFORM1  = '7920D   '                                                            \n",
-       "TUNIT1  = 'angstroms'                                                           \n",
-       "TTYPE2  = 'spectrum'                                                            \n",
-       "TFORM2  = '7920D   '                                                            \n",
-       "TUNIT2  = 'unitless'                                                            \n",
-       "TTYPE3  = 'uncertainty'                                                         \n",
-       "TFORM3  = '7920D   '                                                            \n",
-       "TUNIT3  = 'unitless'                                                            \n",
-       "TTYPE4  = 'offset  '                                                            \n",
-       "TFORM4  = '7920D   '                                                            \n",
-       "TUNIT4  = 'unitless'                                                            \n",
-       "TTYPE5  = 'offset_uncertainty'                                                  \n",
-       "TFORM5  = '7920D   '                                                            \n",
-       "TUNIT5  = 'unitless'                                                            \n",
-       "TTYPE6  = 'n_pixels'                                                            \n",
-       "TFORM6  = '7920I   '                                                            \n",
-       "TUNIT6  = 'pixels  '                                                            \n",
-       "TTYPE7  = 'reduced_chi'                                                         \n",
-       "TFORM7  = '7920D   '                                                            \n",
-       "TUNIT7  = 'unitless'                                                            \n",
-       "TTYPE8  = 'pixel_mask'                                                          \n",
-       "TFORM8  = '7920L   '                                                            \n",
-       "TUNIT8  = 'unitless'                                                            \n",
-       "TTYPE9  = 'continuum'                                                           \n",
-       "TFORM9  = '7920D   '                                                            \n",
-       "TTYPE10 = 'continuum_mask'                                                      \n",
-       "TFORM10 = '7920D   '                                                            \n",
-       "TTYPE11 = 'tellurics'                                                           \n",
-       "TFORM11 = '7920D   '                                                            \n",
-       "TTYPE12 = 'order   '                                                            \n",
-       "TFORM12 = 'I       '                                                            \n",
-       "TTYPE13 = 'bary_wavelength'                                                     \n",
-       "TFORM13 = '7920D   '                                                            \n",
-       "TUNIT13 = 'angstroms'                                                           \n",
-       "TTYPE14 = 'blaze   '                                                            \n",
-       "TFORM14 = '7920D   '                                                            \n",
-       "TUNIT14 = 'e-      '                                                            \n",
-       "TTYPE15 = 'bary_excalibur'                                                      \n",
-       "TFORM15 = '7920D   '                                                            \n",
-       "TUNIT15 = 'angstroms'                                                           \n",
-       "TTYPE16 = 'excalibur'                                                           \n",
-       "TFORM16 = '7920D   '                                                            \n",
-       "TUNIT16 = 'angstroms'                                                           \n",
-       "TTYPE17 = 'excalibur_mask'                                                      \n",
-       "TFORM17 = '7920L   '                                                            \n",
-       "TUNIT17 = 'unitless'                                                            "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/jakobharteg/Desktop/34411_spectra/34411_201127.1108.fits'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/pd/q4f8j97x0gv_zjtmdgf4r3g00000gn/T/ipykernel_66063/2336699827.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/Users/jakobharteg/Desktop/34411_spectra/34411_201127.1108.fits\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mhdu1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# hdu1.info()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mhdu1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/bsc_project/lib/python3.9/site-packages/astropy/io/fits/hdu/hdulist.py\u001b[0m in \u001b[0;36mfitsopen\u001b[0;34m(name, mode, memmap, save_backup, cache, lazy_load_hdus, ignore_missing_simple, **kwargs)\u001b[0m\n\u001b[1;32m    174\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Empty filename: {name!r}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    175\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 176\u001b[0;31m     return HDUList.fromfile(name, mode, memmap, save_backup, cache,\n\u001b[0m\u001b[1;32m    177\u001b[0m                             lazy_load_hdus, ignore_missing_simple, **kwargs)\n\u001b[1;32m    178\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/bsc_project/lib/python3.9/site-packages/astropy/io/fits/hdu/hdulist.py\u001b[0m in \u001b[0;36mfromfile\u001b[0;34m(cls, fileobj, mode, memmap, save_backup, cache, lazy_load_hdus, ignore_missing_simple, **kwargs)\u001b[0m\n\u001b[1;32m    409\u001b[0m         \"\"\"\n\u001b[1;32m    410\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 411\u001b[0;31m         return cls._readfrom(fileobj=fileobj, mode=mode, memmap=memmap,\n\u001b[0m\u001b[1;32m    412\u001b[0m                              \u001b[0msave_backup\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msave_backup\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcache\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcache\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    413\u001b[0m                              \u001b[0mignore_missing_simple\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mignore_missing_simple\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/bsc_project/lib/python3.9/site-packages/astropy/io/fits/hdu/hdulist.py\u001b[0m in \u001b[0;36m_readfrom\u001b[0;34m(cls, fileobj, data, mode, memmap, cache, lazy_load_hdus, ignore_missing_simple, **kwargs)\u001b[0m\n\u001b[1;32m   1069\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfileobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_File\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1070\u001b[0m                 \u001b[0;31m# instantiate a FITS file object (ffo)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1071\u001b[0;31m                 \u001b[0mfileobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_File\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfileobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmemmap\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmemmap\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcache\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcache\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1072\u001b[0m             \u001b[0;31m# The Astropy mode is determined by the _File initializer if the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1073\u001b[0m             \u001b[0;31m# supplied mode was None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/bsc_project/lib/python3.9/site-packages/astropy/utils/decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    545\u001b[0m                     \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwarning_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    546\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 547\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    548\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    549\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/bsc_project/lib/python3.9/site-packages/astropy/io/fits/file.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, fileobj, mode, memmap, overwrite, cache)\u001b[0m\n\u001b[1;32m    173\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_open_fileobj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfileobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moverwrite\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfileobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbytes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 175\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_open_filename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfileobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moverwrite\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    176\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_open_filelike\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfileobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moverwrite\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/bsc_project/lib/python3.9/site-packages/astropy/io/fits/file.py\u001b[0m in \u001b[0;36m_open_filename\u001b[0;34m(self, filename, mode, overwrite)\u001b[0m\n\u001b[1;32m    562\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    563\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_try_read_compressed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmagic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mext\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 564\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfileobj_open\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIO_FITS_MODES\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    565\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose_on_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    566\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/bsc_project/lib/python3.9/site-packages/astropy/io/fits/util.py\u001b[0m in \u001b[0;36mfileobj_open\u001b[0;34m(filename, mode)\u001b[0m\n\u001b[1;32m    388\u001b[0m     \"\"\"\n\u001b[1;32m    389\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 390\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbuffering\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    391\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    392\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/jakobharteg/Desktop/34411_spectra/34411_201127.1108.fits'"
+     ]
     }
    ],
    "source": [
