Clean up a bit and other stuff...

--- a/single_peak_explorations.ipynb
+++ b/single_peak_explorations.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each peak in the LFC file appears to be very flat on the top. This explores that. \n",
+    "It turned out that it was because of the way that I was normalizing peaks. \n",
+    "super_gauss_demo_for_lars.ipynb shows the correct normalization."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
