--- a/calib_interpolation.ipynb
+++ b/calib_interpolation.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -369,6 +369,7 @@
     "# res_interp = np.genfromtxt(\"fit_results/residuals_interp_2nd_cropped.csv\")\n",
     "# res_interp = np.genfromtxt(\"fit_results/residuals_interp_all_peaks_every_2nd_flipped.csv\")\n",
     "res_interp = np.genfromtxt(\"fit_results/residuals_interp_all_peaks_every_2nd_flipped_with_errors_sqrt3.csv\")\n",
+    "# res_interp = np.genfromtxt(\"fit_results/residuals_5degree_fit_error_sqrt3.csv\")\n",
     "\n",
     "print(\"Polyfit:\")\n",
     "print_res_info(res_fit5)\n",
@@ -388,7 +389,7 @@
     "plt.legend(loc=\"upper right\")\n",
     "# plt.yscale('log')\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"figures/problem1/hist_peak_residuals_poly_and_interp.png\", dpi=300)\n"
+    "# plt.savefig(\"figures/problem1/hist_peak_residuals_poly_and_interp.png\", dpi=300)\n"
    ]
   },
   {
@@ -468,24 +469,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(5329.00576727)"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -494,9 +477,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/6 [00:00<?, ?it/s]/Users/jakobharteg/GitHub/bachelor-project/calibration_functions.py:89: RuntimeWarning: overflow encountered in power\n",
+      "  return A * np.exp(-z**P) + C + b * (x - mu)\n",
+      "/Users/jakobharteg/GitHub/bachelor-project/calibration_functions.py:89: RuntimeWarning: divide by zero encountered in power\n",
+      "  return A * np.exp(-z**P) + C + b * (x - mu)\n",
+      "100%|██████████| 6/6 [04:29<00:00, 44.96s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "# Include interpolation sigma check\n",
     "def compute_interp_sigma(results):\n",
@@ -540,12 +535,46 @@
     "\n",
     "\n",
     "sigmas = []\n",
-    "for s in np.arange(2, 8):\n",
+    "for s in tqdm.tqdm(np.arange(2, 8)):\n",
     "    results = fit_all_peaks_in_all_orders(correct_errors=True, custom_error_factor=np.sqrt(s))\n",
     "    sigma = compute_interp_sigma(results)\n",
-    "    sigmas.append(sigma)\n",
-    "\n"
+    "    sigmas.append(sigma)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[39.21483928899965,\n",
+       " 0.9336073845515256,\n",
+       " 41.83899076181079,\n",
+       " 1.7719583535378467,\n",
+       " 35.65157776732648,\n",
+       " 0.33645499266916423]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# plt.figure(figsize=(16,8))\n",
+    "# plt.plot(np.arange(2,8), sigmas, \".\")\n",
+    "\n",
+    "sigmas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
